pyhton-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: python-app
        image: python-app:v1
        ports:
        - containerPort: 8070
