python-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
