python-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-ingress
  labels:
    name: py-ingress
spec:
  rules:
  - host: '*.akadevops.store'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-svc
            port: 
              number: 8070
